@@ -14,8 +14,6 @@
  * limitations under the License.
  */
 
-import org.gradle.internal.jvm.Jvm
-
 apply plugin: EhDeploy
 
 dependencies {
@@ -35,14 +33,10 @@ dependencies {
   testCompile "org.terracotta:passthrough-server:$parent.terracottaPassthroughTestingVersion"
 }
 
-compileTestJava {
-  options.forkOptions.executable = Jvm.current().javacExecutable
-  sourceCompatibility = 1.8
-  targetCompatibility = 1.8
-}
-
 test {
-  executable = Jvm.current().javaExecutable
+  if (testJava.javaVersion.isJava9Compatible()) {
+    jvmArgs += ['--add-modules', 'java.xml.bind']
+  }
 }
 
 tasks.withType(JavaCompile) {
