@@ -34,6 +34,12 @@ dependencies {
   pomOnlyProvided 'javax.transaction:jta:1.1', 'org.codehaus.btm:btm:2.1.4'
 }
 
+test {
+  if (testJava.javaVersion.isJava9Compatible()) {
+    jvmArgs += ['--add-modules', 'java.xml.bind']
+  }
+}
+
 tasks.withType(JavaCompile) {
   options.compilerArgs += ['-Werror']
 }
